feat: Add Nablarch example application with database schema and entities
- Created schema configuration XML files for Nablarch components.
- Added database connection management configuration for web UI.
- Implemented entity classes for Client, Industry, Project, SystemAccount, and Users.
- Developed H2 database initialization script with application tables and seed data.
- Introduced a script to update README version from pom.xml.
- Added Jetty 12 embedded server implementation with necessary configurations and class loader support.