@@ -10,20 +10,25 @@ Provides features like code coverage (JaCoCo), response tracing, and an admin da
 ```text
 waitt-parent (pom.xml)          -- Parent POM, version management
 ├── waitt-api                   -- SPI interfaces (EmbeddedServer, WebappDecorator, etc.)
-├── waitt-maven-plugin          -- Maven plugin (waitt:run goal)
+├── waitt-maven-plugin          -- Maven plugin (waitt:run, waitt:run-headless, waitt:jar goals)
 ├── waitt-embed-runner          -- Embedded runner utilities
-├── waitt-tomcat9               -- Tomcat 9 server (javax.servlet)
-├── waitt-tomcat10              -- Tomcat 10 server (jakarta.servlet)
-├── waitt-tomcat11              -- Tomcat 11 server (jakarta.servlet)
-├── waitt-jetty9                -- Jetty 9 server (javax.servlet)
-├── waitt-coverage              -- Coverage base
-├── waitt-jacoco                -- JaCoCo integration
+├── waitt-tomcat9               -- Tomcat 9.0 server (javax.servlet / Servlet 4.0)
+├── waitt-tomcat10              -- Tomcat 10.1 server (jakarta.servlet / Servlet 6.0)
+├── waitt-tomcat11              -- Tomcat 11.0 server (jakarta.servlet / Servlet 6.1)
+├── waitt-jetty12               -- Jetty 12 server (jakarta.servlet / Servlet 6.0)
+├── waitt-coverage              -- Cobertura coverage
+├── waitt-jacoco                -- JaCoCo coverage
 ├── waitt-dashboard             -- Dashboard UI (war)
-├── waitt-admin                 -- Admin feature
-└── waitt-tracer                -- Response tracing feature (jakarta.servlet)
+├── waitt-admin                 -- Admin feature (memory/CPU monitoring, heap dump, reload)
+└── waitt-tracer                -- Response tracing feature (jakarta.servlet, Tomcat 10/11 only)
 ```
 
-`examples/` directory contains sample apps (sa-struts, struts2, spring-boot, nablarch) that are **not** part of the reactor build.
+`examples/` directory contains sample apps that are **not** part of the reactor build:
+
+- `examples/spring-boot` -- Spring Boot (waitt-tomcat11)
+- `examples/struts2` -- Struts2 6.x (waitt-tomcat9, javax.servlet)
+- `examples/nablarch` -- Nablarch 5u26 (waitt-tomcat9, javax.servlet)
+- `examples/sa-struts` -- SAStruts (waitt-tomcat9, javax.servlet)
 
 ## Build
 
@@ -38,8 +43,16 @@ Java 8 target (`maven.compiler.source=1.8`). Build requires JDK 8+ but runs on m
 - Server implementations are loaded via `ServiceLoader` (`META-INF/services/net.unit8.waitt.api.EmbeddedServer`)
 - Features (jacoco, tracer, admin) are loaded via `ServiceLoader` as `WebappDecorator`
 - ClassLoader isolation uses Plexus `ClassRealm`
-- `waitt-tracer` uses **Jakarta Servlet API** (compatible with Tomcat 10/11, NOT with Tomcat 9)
+- `waitt-tracer` uses **Jakarta Servlet API** (compatible with Tomcat 10/11 and Jetty 12, NOT with Tomcat 9)
 - `waitt-maven-plugin` supports **forked JVM execution** (`<forkJvm>true</forkJvm>`) with Maven Toolchains for legacy apps requiring older JDKs
+- Forked JVM args can be passed via `<forkJvmArgs>` (e.g., `--add-opens` flags for frameworks using deep reflection on modern JDKs)
+
+## Servlet API Compatibility
+
+When choosing a server module, match the Servlet API namespace your framework uses:
+
+- **`javax.servlet`**: Use `waitt-tomcat9` (Struts2 6.x, Nablarch, SAStruts, etc.)
+- **`jakarta.servlet`**: Use `waitt-tomcat10`, `waitt-tomcat11`, or `waitt-jetty12` (Spring Boot 3.x, Struts2 7.x, Jakarta EE 10+ apps)
 
 ## Version Management
 
