@@ -1,5 +1,4 @@
-WAITT
-==================
+# WAITT
 
 WAITT is the Web Application Integration Test Tool.
 
@@ -59,9 +58,39 @@ It doesn't include non-resource files automatically. So, if your app refers asse
 % java -jar xxx-standalone.jar -d src/main/webapp
 ```
 
+### Forked JVM execution
+
+For applications that require specific JVM arguments or a different JDK version, you can run in a forked JVM.
+
+```xml
+<configuration>
+  <forkJvm>true</forkJvm>
+  <forkJvmArgs>--add-opens=java.base/java.lang=ALL-UNNAMED</forkJvmArgs>
+  <forkJdkVersion>21</forkJdkVersion>
+  ...
+</configuration>
+```
+
+Or via command line properties:
+
+```shell
+% mvn waitt:run -Dwaitt.fork=true -Dwaitt.fork.jvmArgs="--add-opens=java.base/java.lang=ALL-UNNAMED"
+```
+
+This is useful when running legacy frameworks on modern JDKs that require `--add-opens` flags, or when you need to use a specific JDK version via Maven Toolchains.
+
 ## Supported server products
 
-- Tomcat 9
+Choose a server based on the Servlet API version your application uses.
+
+| Server | Servlet API | Namespace |
+|--------|-------------|-----------|
+| waitt-tomcat9 | Servlet 4.0 | `javax.servlet` |
+| waitt-tomcat10 | Servlet 6.0 (Jakarta EE 10) | `jakarta.servlet` |
+| waitt-tomcat11 | Servlet 6.1 (Jakarta EE 11) | `jakarta.servlet` |
+| waitt-jetty12 | Servlet 6.0 (Jakarta EE 10) | `jakarta.servlet` |
+
+- Tomcat 9 (javax.servlet)
 
 ```xml
   <server>
@@ -71,7 +100,7 @@ It doesn't include non-resource files automatically. So, if your app refers asse
   </server>
 ```
 
-- Tomcat 10 (Jakarta EE 10)
+- Tomcat 10 (jakarta.servlet)
 
 ```xml
   <server>
@@ -81,7 +110,7 @@ It doesn't include non-resource files automatically. So, if your app refers asse
   </server>
 ```
 
-- Tomcat 11 (Jakarta EE 11)
+- Tomcat 11 (jakarta.servlet)
 
 ```xml
   <server>
@@ -91,18 +120,17 @@ It doesn't include non-resource files automatically. So, if your app refers asse
   </server>
 ```
 
-- Jetty 9
+- Jetty 12 (jakarta.servlet)
 
 ```xml
   <server>
     <groupId>net.unit8.waitt.server</groupId>
-    <artifactId>waitt-jetty9</artifactId>
+    <artifactId>waitt-jetty12</artifactId>
     <version>1.3.1-SNAPSHOT</version>
   </server>
 ```
 
 If you set multiple servers and maven is executed in the interactive mode, you can select a server at runtime.
-
 
 ## Features
 
@@ -110,7 +138,6 @@ If you set multiple servers and maven is executed in the interactive mode, you c
 
 You can use JaCoCo or Cobertura.
 When you access to `/_coverage/`, you can see the coverages of your code.
-
 
 #### Cobertura
 
@@ -142,6 +169,7 @@ When you access to `/_coverage/`, you can see the coverages of your code.
     <type>war</type>
   </feature>
 ```
+
 When you access to `/_dashboard/`, you can see the information of your application.
 
 In dashboard, you can monitor the memory usage / cpu load of a server and redeploy your application.
@@ -155,10 +183,10 @@ Add `waitt-admin` feature to your configuration.
   </feature>
 ```
 
-
 ### Tracer
 
-You can show and search logs at development in Kibana.
+You can show and search HTTP request/response logs at development in Kibana.
+Note: waitt-tracer uses the Jakarta Servlet API, so it is only compatible with Tomcat 10/11 and Jetty 12.
 
 ```xml
   <feature>
@@ -171,11 +199,35 @@ You can show and search logs at development in Kibana.
   </feature>
 ```
 
+## Examples
+
+The `examples/` directory contains sample applications:
+
+| Example | Framework | Server |
+|---------|-----------|--------|
+| spring-boot | Spring Boot | waitt-tomcat11 |
+| struts2 | Struts2 6.x | waitt-tomcat9 |
+| nablarch | Nablarch 5u26 | waitt-tomcat9 |
+| sa-struts | SAStruts | waitt-tomcat9 |
+
+To run an example:
+
+```shell
+% cd examples/spring-boot
+% mvn waitt:run
+```
+
 ## for Developer
+
+Refresh README version placeholders from `pom.xml`:
+
+```shell
+% ./scripts/update-readme-version.sh
+```
 
 ClassLoader hierarchy
 
-```
+```text
 WaittRealm (Maven plugin)
    |
 ServerRealm (Tomcat or Jetty)
